# flosidian

./: IDENTITY.md  README.md  USER.md  notes.html  package.json  pnpm-lock.yaml  wrangler.jsonc
.clawhub/: lock.json
docs/: openclaw-multi-agent.md
knowledge/: openclaw-docs.md
memory/: openclaw-knowledge.md
project/flosidian/: README.md  deploy.sh  neuronote-mvp-prd.md  package-lock.json  package.json  pnpm-lock.yaml  preview.html
project/flosidian/src/: App.css  App.tsx
project/flosidian/src-tauri/: Cargo.toml  tauri.conf.json
project/flosidian/src-tauri/src/: lib.rs  main.rs
scripts/: check-doc-updates.sh  check_doc_updates.py  update-docs-check.sh
src/: App.css  App.tsx
