[package]
name = "neuronote"
version = "0.1.0"
description = "NeuroNote - A local-first bidirectional note-taking app"
authors = ["jun-wwx"]
edition = "2021"

[lib]
name = "neuronote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

